# Prac_6_sem

./: README.md
20260216/0/: commitobj.py  listobj.py  readobj.py
20260216/1/: prog.py
20260226/0/: onecow.py
20260226/1/: prog.py
20260226/2/: prog.py
20260302/0/: 1.py  2.py  3.py
20260302/1/: prog.py
20260312/0/: calendar_prog.py  cmd_prog.py
20260312/1/: prog.py
20260316/0/: 0001-Delete-calendar.txt.patch  0002-comm-1.patch  diff_ps  prog_asyn.py  prog_socket.py  ps1  ps2
20260316/1/: client.py  server.py
20260316/patchdir/: 0001-Separation-of-MUD-into-client-and-server.patch  0002-Transferred-print-to-client.py.patch  0003-Added-client-server-socket.patch  0004-MUD-client-server-done.patch
20260323/0/: httpsrv.py
20260323/1/: client.py  server.py
20260330/0/: .flake8  .pydocstyle  prog.py  sin.py
20260330/1/: client.py  server.py
20260330/1/mood/: __init__.py
20260330/1/mood/client/: __init__.py  __main__.py
20260330/1/mood/common/: __init__.py  constants.py
20260406/0/: prog.py  restcalend.py
20260406/1/doc/: index.rst
20260413/0/: wordcount.pot  wordcount.py  wordecounte.pot
20260420/0/: echosrv.py  prog.py  sqroo.py  sqroosrv.py  test_prog.py  test_sqroo.py  test_sqroosrv.py
20260420/1/doc/: API.rst
20260420/2/: test_client.py
20260427/0/: .doit.db  dodo.py  restcalend.py
20260427/1/: test_server_from_client.py
20260427/1/doc/: conf.py
20260504/0/: MANIFEST.in  dodo.py  pyproject.toml
20260504/0/po/ru_RU.UTF-8/LC_MESSAGES/: wordcount.po  wordecounte.po
20260504/0/wordcount/: __init__.py
20260504/0/wordcount.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
20260504/1/: MANIFEST.in  dodo.py  pyproject.toml  requirements-dev.txt
20260504/1/doc/: API.rst  index.rst
20260504/1/mood/client/: __main__.py
20260504/1/mood/server/: __main__.py  game.py
20260504/1/mood/server/data/: jgsbat.txt
(+38 files in other folders)
